alles in einen Log + anlegen eines neuen Logs

--- a/Template/en.lproj/ViewController_iPad.xib
+++ b/Template/en.lproj/ViewController_iPad.xib
@@ -34,6 +34,16 @@
                                 <outlet property="delegate" destination="-1" id="ddV-w8-Ra5"/>
                             </connections>
                         </tableView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9wL-IA-1eW">
+                            <rect key="frame" x="20" y="726" width="80" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="newLog">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="newLog:" destination="-1" eventType="touchUpInside" id="Vuo-vv-OIv"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
